add assignment for loop

--- a/automate4feb/log.html
+++ b/automate4feb/log.html
@@ -2081,31 +2081,31 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,21],[],[[4,0,0,[],[1,14,1],[[0,5,0,0,0,6,0,0,[1,15,1],[[5,7,0,0,0,0,0,0,[1,15,0],[[0,8,9,0,10,11,0,0,[1,15,0],[]]]],[6,12,0,0,0,0,0,0,[3,15,0],[[0,8,9,0,10,13,0,0,[3,15,0],[]]]],[6,14,0,0,0,0,0,0,[3,16,0],[[0,8,9,0,10,15,0,0,[3,16,0],[]]]],[6,16,0,0,0,0,0,0,[3,16,0],[[0,8,9,0,10,17,0,0,[3,16,0],[]]]],[6,18,0,0,0,0,0,0,[3,16,0],[[0,8,9,0,10,19,0,0,[3,16,0],[]]]]]]]],[20,0,0,[],[1,16,1],[[0,5,0,0,0,21,0,0,[1,16,1],[[5,7,0,0,0,0,0,0,[3,16,0],[[0,8,9,0,10,11,0,0,[3,16,0],[]]]],[6,12,0,0,0,0,0,0,[1,16,0],[[0,8,9,0,10,13,0,0,[1,17,0],[]]]],[6,14,0,0,0,0,0,0,[3,17,0],[[0,8,9,0,10,15,0,0,[3,17,0],[]]]],[6,16,0,0,0,0,0,0,[3,17,0],[[0,8,9,0,10,17,0,0,[3,17,0],[]]]],[6,18,0,0,0,0,0,0,[3,17,0],[[0,8,9,0,10,19,0,0,[3,17,0],[]]]]]]]],[22,0,0,[],[1,17,1],[[0,5,0,0,0,23,0,0,[1,17,1],[[5,7,0,0,0,0,0,0,[3,17,0],[[0,8,9,0,10,11,0,0,[3,17,0],[]]]],[6,12,0,0,0,0,0,0,[3,17,0],[[0,8,9,0,10,13,0,0,[3,18,0],[]]]],[6,14,0,0,0,0,0,0,[1,18,0],[[0,8,9,0,10,15,0,0,[1,18,0],[]]]],[6,16,0,0,0,0,0,0,[3,18,0],[[0,8,9,0,10,17,0,0,[3,18,0],[]]]],[6,18,0,0,0,0,0,0,[3,18,0],[[0,8,9,0,10,19,0,0,[3,18,0],[]]]]]]]],[24,0,0,[],[1,18,1],[[0,5,0,0,0,25,0,0,[1,18,1],[[5,7,0,0,0,0,0,0,[3,18,0],[[0,8,9,0,10,11,0,0,[3,18,0],[]]]],[6,12,0,0,0,0,0,0,[3,18,0],[[0,8,9,0,10,13,0,0,[3,19,0],[]]]],[6,14,0,0,0,0,0,0,[3,19,0],[[0,8,9,0,10,15,0,0,[3,19,0],[]]]],[6,16,0,0,0,0,0,0,[1,19,0],[[0,8,9,0,10,17,0,0,[1,19,0],[]]]],[6,18,0,0,0,0,0,0,[3,19,0],[[0,8,9,0,10,19,0,0,[3,19,0],[]]]]]]]],[26,0,0,[],[1,19,1],[[0,5,0,0,0,27,0,0,[1,20,1],[[5,7,0,0,0,0,0,0,[3,20,0],[[0,8,9,0,10,11,0,0,[3,20,0],[]]]],[6,12,0,0,0,0,0,0,[3,20,0],[[0,8,9,0,10,13,0,0,[3,20,0],[]]]],[6,14,0,0,0,0,0,0,[3,20,0],[[0,8,9,0,10,15,0,0,[3,20,0],[]]]],[6,16,0,0,0,0,0,0,[3,20,0],[[0,8,9,0,10,17,0,0,[3,20,0],[]]]],[6,18,0,0,0,0,0,0,[1,20,0],[[0,8,9,0,10,19,0,0,[1,20,0],[]]]]]]]]],[],[5,5,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,27],[],[[4,0,0,[],[1,15,12],[[0,5,6,0,7,8,9,0,[1,15,0],[[15,2,10]]],[3,11,0,0,0,0,0,0,[1,15,11],[[4,12,0,0,0,0,0,0,[1,15,2],[[0,13,6,0,14,15,16,0,[1,15,0],[[16,2,17]]],[0,18,6,0,19,16,0,0,[1,16,0],[]],[5,20,0,0,0,0,0,0,[1,16,0],[[0,18,6,0,19,9,0,0,[1,16,0],[]]]],[0,13,6,0,14,21,9,0,[1,16,0],[[16,2,22]]],[0,23,6,0,24,25,0,0,[1,16,1],[]]]],[4,26,0,0,0,0,0,0,[1,17,1],[[0,13,6,0,14,15,16,0,[1,17,0],[[17,2,27]]],[0,18,6,0,19,16,0,0,[1,17,0],[]],[5,20,0,0,0,0,0,0,[3,17,0],[[0,18,6,0,19,9,0,0,[3,18,0],[]]]],[0,13,6,0,14,21,9,0,[1,18,0],[[18,2,28]]],[0,23,6,0,24,25,0,0,[1,18,0],[]]]],[4,29,0,0,0,0,0,0,[1,18,1],[[0,13,6,0,14,15,16,0,[1,18,0],[[18,2,17]]],[0,18,6,0,19,16,0,0,[1,18,0],[]],[5,20,0,0,0,0,0,0,[1,19,0],[[0,18,6,0,19,9,0,0,[1,19,0],[]]]],[0,13,6,0,14,21,9,0,[1,19,0],[[19,2,30]]],[0,23,6,0,24,25,0,0,[1,19,0],[]]]],[4,31,0,0,0,0,0,0,[1,20,1],[[0,13,6,0,14,15,16,0,[1,20,0],[[20,2,27]]],[0,18,6,0,19,16,0,0,[1,20,0],[]],[5,20,0,0,0,0,0,0,[3,20,0],[[0,18,6,0,19,9,0,0,[3,20,0],[]]]],[0,13,6,0,14,21,9,0,[1,20,0],[[20,2,32]]],[0,23,6,0,24,25,0,0,[1,20,0],[]]]],[4,33,0,0,0,0,0,0,[1,21,1],[[0,13,6,0,14,15,16,0,[1,21,0],[[21,2,17]]],[0,18,6,0,19,16,0,0,[1,21,0],[]],[5,20,0,0,0,0,0,0,[1,21,0],[[0,18,6,0,19,9,0,0,[1,21,0],[]]]],[0,13,6,0,14,21,9,0,[1,22,0],[[22,2,34]]],[0,23,6,0,24,25,0,0,[1,22,0],[]]]],[4,35,0,0,0,0,0,0,[1,22,1],[[0,13,6,0,14,15,16,0,[1,22,0],[[22,2,27]]],[0,18,6,0,19,16,0,0,[1,22,0],[]],[5,20,0,0,0,0,0,0,[3,23,0],[[0,18,6,0,19,9,0,0,[3,23,0],[]]]],[0,13,6,0,14,21,9,0,[1,23,0],[[23,2,36]]],[0,23,6,0,24,25,0,0,[1,23,0],[]]]],[4,37,0,0,0,0,0,0,[1,23,1],[[0,13,6,0,14,15,16,0,[1,23,0],[[23,2,17]]],[0,18,6,0,19,16,0,0,[1,24,0],[]],[5,20,0,0,0,0,0,0,[1,24,0],[[0,18,6,0,19,9,0,0,[1,24,0],[]]]],[0,13,6,0,14,21,9,0,[1,24,0],[[24,2,38]]],[0,23,6,0,24,25,0,0,[1,24,0],[]]]],[4,39,0,0,0,0,0,0,[1,24,1],[[0,13,6,0,14,15,16,0,[1,25,0],[[25,2,27]]],[0,18,6,0,19,16,0,0,[1,25,0],[]],[5,20,0,0,0,0,0,0,[3,25,0],[[0,18,6,0,19,9,0,0,[3,25,0],[]]]],[0,13,6,0,14,21,9,0,[1,25,0],[[25,2,40]]],[0,23,6,0,24,25,0,0,[1,25,0],[]]]],[4,41,0,0,0,0,0,0,[1,26,1],[[0,13,6,0,14,15,16,0,[1,26,0],[[26,2,17]]],[0,18,6,0,19,16,0,0,[1,26,0],[]],[5,20,0,0,0,0,0,0,[1,26,0],[[0,18,6,0,19,9,0,0,[1,26,0],[]]]],[0,13,6,0,14,21,9,0,[1,26,0],[[26,2,42]]],[0,23,6,0,24,25,0,0,[1,26,0],[[27,2,43]]]]]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*If Else","*/Users/rajitkaew.j/Documents/automate/automate4feb/if_else.robot","*if_else.robot","*TC_01","*Calculate grade","*${a}","*${text}&gt;=90","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*A","*${text}&gt;=80","*B","*${text}&gt;=70","*C","*${text}&gt;=60","*D","*${text}&lt;60","*F","*TC_02","*${b}","*TC_03","*${c}","*TC_04","*${d}","*TC_05","*${e}"]);
+window.output["strings"] = window.output["strings"].concat(["*","*For Loop","*/Users/rajitkaew.j/Documents/automate/automate4feb/for_loop.robot","*for_loop.robot","*TC_01","*Set Variable","*BuiltIn","*<p>Returns the given values which can then be assigned to a variables.\x3c/p>","*0","*${i}","*${i} = 0","*${index}    IN    @{hero}","*${index} = ironman","*Evaluate","*<p>Evaluates the given expression in Python and returns the result.\x3c/p>","*${i}%2","*${number}","*${number} = 0","*Log To Console","*<p>Logs the given message to the console.\x3c/p>","*${number}==0","*${i}+1","*${i} = 1","*Exit For Loop If","*<p>Stops executing the enclosing FOR loop if the <code>condition\x3c/code> is true.\x3c/p>","*\"${index.lower()}\" == \"blackwindow\"","*${index} = batman","*${number} = 1","*${i} = 2","*${index} = captain","*${i} = 3","*${index} = superman","*${i} = 4","*${index} = hulk","*${i} = 5","*${index} = shazam","*${i} = 6","*${index} = thor","*${i} = 7","*${index} = flash","*${i} = 8","*${index} = blackwindow","*${i} = 9","*Exiting for loop altogether."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":5,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"If Else","name":"If Else","pass":5,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"For Loop","name":"For Loop","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1741055105259;
+window.output["baseMillis"] = 1741057783821;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 24;
+window.output["generated"] = 30;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
 </script>
 <script type="text/javascript">
-window.settings = {"defaultLevel":"INFO","minLevel":"NONE","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
+window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
 </script>
 <title></title>
 </head>
