--- a/automate4feb/report.html
+++ b/automate4feb/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,21],[],[[4,0,0,[],[1,14,1],[]],[5,0,0,[],[1,16,1],[]],[6,0,0,[],[1,17,1],[]],[7,0,0,[],[1,18,1],[]],[8,0,0,[],[1,19,1],[]]],[],[5,5,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,27],[],[[4,0,0,[],[1,15,12],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*If Else","*/Users/rajitkaew.j/Documents/automate/automate4feb/if_else.robot","*if_else.robot","*TC_01","*TC_02","*TC_03","*TC_04","*TC_05"]);
+window.output["strings"] = window.output["strings"].concat(["*","*For Loop","*/Users/rajitkaew.j/Documents/automate/automate4feb/for_loop.robot","*for_loop.robot","*TC_01"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":5,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"If Else","name":"If Else","pass":5,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"For Loop","name":"For Loop","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1741055105259;
+window.output["baseMillis"] = 1741057783821;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 24;
+window.output["generated"] = 30;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
