--- a/tests1/report.html
+++ b/tests1/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,13206],[],[[4,0,0,[],[0,116,13089,5],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,25392],[],[[4,0,0,[],[1,196,25195],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Opentest1","*/Users/rajitkaew.j/Documents/automate/tests1/opentest1.robot","*opentest1.robot","*TC01 - open google and input search","*Element with locator 'id=APjFqb' not found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Opentest1","*/Users/rajitkaew.j/Documents/automate/tests1/opentest1.robot","*opentest1.robot","*TC01 - open google and input search"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:13","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:13","fail":1,"id":"s1","label":"Opentest1","name":"Opentest1","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:25","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:25","fail":0,"id":"s1","label":"Opentest1","name":"Opentest1","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1740992301610;
+window.output["baseMillis"] = 1741058222465;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 13209;
+window.output["generated"] = 25397;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
